k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-api
  namespace: chat-api
spec:
  selector:
    app: chat-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
